# transformers-inference-toolkit

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
transformers_inference_toolkit/: __init__.py  deepspeed_utils.py  enums.py  onnx_enums.py  onnx_utils.py  optimizer.py  predictor.py  transformers_utils.py
